--- a/src/app/modules/home/home.page.html
+++ b/src/app/modules/home/home.page.html
@@ -1,58 +1,59 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button fill="clear" id="icon-button" (click)="onIconButtonClick()">
-        <ion-icon name="person-circle-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Inicio</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content [fullscreen]="true" class="login-content">
+  <div class="divMayor">
 
-<ion-content [fullscreen]="true">
-  <div class="favorites-container">
-    <ion-card *ngIf="favorites.length > 0">
-      <ion-card-header>
-        <ion-card-title>Favoritos</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-list>
-          <ion-item *ngFor="let favorite of favorites">
-            <ion-label>{{ favorite.title || favorite.name }}</ion-label>
-            <ion-button fill="clear" (click)="showDetails(favorite)">
-              Ver detalles
-            </ion-button>
-            <ion-button fill="clear" (click)="removeFromFavorites(favorite.id)">
-              <ion-icon name="trash-outline"></ion-icon>
-            </ion-button>
-          </ion-item>
-        </ion-list>
-      </ion-card-content>
-    </ion-card>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-button fill="clear" id="icon-button" (click)="onIconButtonClick()">
+          <ion-icon name="person-circle-outline"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  
+    <div class="favorites-container">
+      <ion-card *ngIf="favorites.length > 0">
+        <ion-card-header>
+          <ion-card-title>Favoritos</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-list>
+            <ion-item *ngFor="let favorite of favorites">
+              <ion-label>{{ favorite.title || favorite.name }}</ion-label>
+              <ion-button fill="clear" (click)="showDetails(favorite)">
+                Ver detalles
+              </ion-button>
+              <ion-button fill="clear" (click)="removeFromFavorites(favorite.id)">
+                <ion-icon name="trash-outline"></ion-icon>
+              </ion-button>
+            </ion-item>
+          </ion-list>
+        </ion-card-content>
+      </ion-card>
+  
+      <!-- Si no hay favoritos -->
+      <ion-card *ngIf="favorites.length === 0">
+        <ion-card-header>
+          <ion-card-title>No tienes favoritos aún</ion-card-title>
+        </ion-card-header>
+      </ion-card>
+    </div>
+  
+    <!-- Botones de la parte inferior -->
+    <ion-segment value="movies-games" class="fixed-bottom">
+      <ion-segment-button value="movies" (click)="navigateToDetail('movie')">
+        <ion-icon name="film-outline"></ion-icon>
+        <ion-label>Películas</ion-label>
+      </ion-segment-button>
+  
+      <ion-segment-button value="games" (click)="navigateToDetail('game')">
+        <ion-icon name="game-controller-outline"></ion-icon>
+        <ion-label>Juegos</ion-label>
+      </ion-segment-button>
+  
+      <ion-segment-button value="anime" (click)="navigateToDetail('anime')">
+        <ion-icon name="tv-outline"></ion-icon>
+        <ion-label>Animes</ion-label>
+      </ion-segment-button>
+    </ion-segment>
 
-    <!-- Si no hay favoritos -->
-    <ion-card *ngIf="favorites.length === 0">
-      <ion-card-header>
-        <ion-card-title>No tienes favoritos aún</ion-card-title>
-      </ion-card-header>
-    </ion-card>
   </div>
-
-  <!-- Botones de la parte inferior -->
-  <ion-segment value="movies-games" class="fixed-bottom">
-    <ion-segment-button value="movies" (click)="navigateToDetail('movie')">
-      <ion-icon name="film-outline"></ion-icon>
-      <ion-label>Películas</ion-label>
-    </ion-segment-button>
-
-    <ion-segment-button value="games" (click)="navigateToDetail('game')">
-      <ion-icon name="game-controller-outline"></ion-icon>
-      <ion-label>Juegos</ion-label>
-    </ion-segment-button>
-
-    <ion-segment-button value="anime" (click)="navigateToDetail('anime')">
-      <ion-icon name="tv-outline"></ion-icon>
-      <ion-label>Animes</ion-label>
-    </ion-segment-button>
-  </ion-segment>
 </ion-content>
