--- a/src/app/modules/home/home.page.html
+++ b/src/app/modules/home/home.page.html
@@ -21,7 +21,7 @@
               <ion-button fill="clear" (click)="showDetails(favorite)">
                 Ver detalles
               </ion-button>
-              <ion-button fill="clear" (click)="removeFromFavorites(favorite.id)">
+              <ion-button fill="clear" (click)="removeFromFavorites(favorite.id,favorite)">
                 <ion-icon name="trash-outline"></ion-icon>
               </ion-button>
             </ion-item>
