--- a/src/app/modules/usuario/usuario.page.scss
+++ b/src/app/modules/usuario/usuario.page.scss
@@ -34,4 +34,9 @@ ion-header {
     font-size: 18px;
     color: $primary-color;
   }
+  .country-flag {
+    width: 50px;
+    height: auto;
+    margin-top: 10px;
+  }
 }
