--- a/src/app/modules/usuario/usuario.page.html
+++ b/src/app/modules/usuario/usuario.page.html
@@ -12,14 +12,6 @@
   <div class="content-container">
     <p>Bienvenido, {{ email }}</p>
 
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-button fill="clear" (click)="goBack()">
-          <ion-icon name="arrow-back-outline"></ion-icon>
-        </ion-button>
-      </ion-buttons>
-    </ion-toolbar>
-
     <!-- Mostrar la imagen del perfil -->
     <div class="profile-image-container">
       <img [src]="imageUrl || 'assets/default-avatar.png'" alt="Foto de perfil" class="profile-image">
@@ -35,7 +27,13 @@
         <ion-card-title>{{ email }}</ion-card-title>
       </ion-card-header>
     </ion-card>
-    
+
+    <!-- Mostrar el país y la bandera -->
+    <div *ngIf="country">
+      <p>Pais Actual: {{ country }}</p>
+      <img *ngIf="countryFlag" [src]="countryFlag" alt="Bandera" class="country-flag">
+    </div>
+
     <!-- Botón de Cierre de Sesión -->
     <ion-button expand="full" color="danger" (click)="onLogoutButtonPressed()">
       Cerrar Sesión
